# nrush

./: .gitignore  Cargo.toml  README.md  build_all.sh  package-lock.json  package.json  pre-install.js  start.js  uninstall.js
.github/workflows/: build.yml  cd.yml
npm/: getBinary.js  install.js  package.json.template  run.js
npm/app/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
npm/app/src/: index.ts
src/: arguments.rs  constants.rs  helpers.rs  main.rs  packages.rs  progress.rs
