[package]
name = "nrush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"tokio" = { version =" 1.34.0", features = ["full"] }
"serde_json" = "1.0.108"
"reqwest" ={ version = "0.11.22", features = ["blocking", "json"] }
"futures" = "0.3.29"
"semver"= "1.0.20"
