[package]
name = "nrush"
version = "0.1.7"
edition = "2021"
description = "A speedy way to get your node project up to date, and probably break things."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"tokio" = { version =" 1.34.0", features = ["full"] }
"serde_json" = "1.0.108"
"reqwest" ={ version = "0.11.22", features = ["blocking", "json"] }
"futures" = "0.3.29"
"semver"= "1.0.20"
"dialoguer" = "0.11.0"
"indicatif" = "0.17.7"
"rand" = "0.8.5"
"crossterm" = "0.22.1"