[package]
name = "nrush"
version = "1.1.2"
edition = "2021"
description = "A speedy way to get your node project up to date, and probably break things."
repository = "https://github.com/omznc/nrush"
license = "ISC"
keywords = ["node", "bun", "update", "updates", "rust"]
authors = ["Omar Zunic <nrush@omarzunic.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"tokio" = { version =" 1.34.0", features = ["full"] }
"serde_json" = "1.0.108"
"reqwest" ={ version = "0.12.7", features = ["blocking", "json"] }
"futures" = "0.3.29"
"semver"= "1.0.20"
"dialoguer" = "0.11.0"
"indicatif" = "0.17.7"
"crossterm" = "0.28.1"
